# AnatomySketch-Software

./: .gitignore  Anatomy Sketch 说明书.html  Anatomy Sketch 说明书.md  AnatomySketch.qrc  AnatomySketch.ui  CMakeLists.txt  README.md  README_ch.md  UserManual.md  UserManual_ch.md
src/: ASApplication.cpp  ASApplication.h  ASHelpWidget.cpp  ASHelpWidget.h  ASHelpWidget.ui  ASLauncher.cpp  ASLauncher.h  CMakeLists.txt  GlobelDeclaration.h  main.cpp
src/CoreFunctionModel/: ASFModelContour.cpp  ASFModelContour.h  ASFModelDICOMImporter.cpp  ASFModelDICOMImporter.h  ASFModelExportDataToDisk.cpp  ASFModelExportDataToDisk.h  ASFModelGeneralInteractor.cpp  ASFModelGeneralInteractor.h  ASFModelImportDataFromDisk.cpp  ASFModelImportDataFromDisk.h  ASFModelLandmark.cpp  ASFModelLandmark.h  ASFModelManager.cpp  ASFModelManager.h  ASFModelMask.cpp  ASFModelMask.h  ASFModelROI.cpp  ASFModelROI.h  ASFModelSeeds.cpp  ASFModelSeeds.h  ASFunctionModelBase.cpp  ASFunctionModelBase.h  CMakeLists.txt
src/DataManager/: ASCustomizeDataWriter.cpp  ASCustomizeDataWriter.h  ASDataManager.cpp  ASDataManager.h  ASDataStructureWalker.cpp  ASDataStructureWalker.h  ASDataTree.cpp  ASDataTree.h  CMakeLists.txt
src/DataManager/DataType/: ASAbstractData.cpp  ASAbstractData.h  ASAnnotation.cpp  ASAnnotation.h  ASArrayImageData.cpp  ASArrayImageData.h  ASContourData.cpp  ASContourData.h  ASDICOMData.cpp  ASDICOMData.h  ASDICOMRTData.cpp  ASDICOMRTData.h  ASImageData.cpp  ASImageData.h  ASLandmarkData.cpp  ASLandmarkData.h  ASMarkData.cpp  ASMarkData.h  ASOperation.cpp  ASOperation.h  ASPolyImageData.cpp  ASPolyImageData.h  ASROIData.cpp  ASROIData.h  ASSeedData.cpp  ASSeedData.h  ASSegmentation.cpp  ASSegmentation.h
src/InteractorStyle/: ASInteractorStyleManager.cpp  ASInteractorStyleManager.h  CMakeLists.txt
src/InteractorStyle/2D/: ASInteractorStyle2DGeneral.cpp  ASInteractorStyle2DGeneral.h  ASInteractorStyle2DMask.cpp  ASInteractorStyle2DMask.h  ASInteractorStyle2DPaintContour.cpp  ASInteractorStyle2DPaintContour.h  ASInteractorStyle2DPaintLandmark.cpp  ASInteractorStyle2DPaintLandmark.h  ASInteractorStyle2DPaintSeeds.cpp  ASInteractorStyle2DPaintSeeds.h  ASInteractorStyle2DPolyDeformation.cpp  ASInteractorStyle2DPolyDeformation.h  ASInteractorStyle2DROICube.cpp  ASInteractorStyle2DROICube.h  ASInteractorStyle2DWindowLevel.cpp  ASInteractorStyle2DWindowLevel.h
src/InteractorStyle/3D/: ASInteractorStyle3DGeneral.cpp  ASInteractorStyle3DGeneral.h
src/Interface/: CMakeLists.txt
src/Interface/FunctionWidget/: ASDialogDICOMImporter.cpp  ASDialogDICOMImporter.h  ASDialogNewSeedsFile.cpp  ASDialogNewSeedsFile.h  AboutWidget.cpp  AboutWidget.h  AboutWidget.ui
src/Interface/MainWidget/: ASDropShadowWidget.cpp  ASDropShadowWidget.h  ASMainWidget.cpp  ASMainWidget.h  ASOperationBar.cpp  ASOperationBar.h  ASPushButtonInTitleWidget.cpp  ASPushButtonInTitleWidget.h  ASSideBar.cpp  ASSideBar.h  ASStatusBar.cpp  ASStatusBar.h  ASTitleWidget.cpp  ASTitleWidget.h  ASToolBar.cpp  ASToolBar.h
src/Interface/OperationBar/: ASDiplayFrame.cpp  ASDiplayFrame.cpp.orig  ASDiplayFrame.h  ASHoverWidgetInQVTKWidget.cpp  ASHoverWidgetInQVTKWidget.h  ASQVTKWidget.cpp  ASQVTKWidget.h
src/Interface/SideBar/: ASDialogNewElement.cpp  ASDialogNewElement.h  ASImageNavigatorWidget.cpp  ASImageNavigatorWidget.h  ASMaskWidget.cpp  ASMaskWidget.h  ASPaintingContourWidget.cpp  ASPaintingContourWidget.h  ASPaintingSeedsWidget.cpp  ASPaintingSeedsWidget.h  ASROIWidget.cpp  ASROIWidget.h  ASWidgetInSideBarBase.cpp  ASWidgetInSideBarBase.h
src/Models/: CMakeLists.txt
src/Models/Addins/: ASAddinsBase.cpp  ASAddinsBase.h  ASFModelAddins.cpp  ASFModelAddins.h  ASOperationWidget.cpp  ASOperationWidget.h  ASTransAddins.cpp  ASTransAddins.h
src/Models/GraphCut/: ASFModelGraphCut.cpp  ASFModelGraphCut.h  ASGraphCutWidget.cpp  ASGraphCutWidget.h  ASThreadGraphCut.cpp  ASThreadGraphCut.h  ASTransGraphCut.cpp  ASTransGraphCut.h
src/Models/PolyDeformation/: ASFModelPolyDeformation.cpp  ASFModelPolyDeformation.h  ASPolyDeformationWidget.cpp  ASPolyDeformationWidget.h  ASTransPolyDeformation.cpp  ASTransPolyDeformation.h
src/Thread/: ASThreadAddins.cpp  ASThreadAddins.h  ASThreadBase.cpp  ASThreadBase.h  ASThreadDICOMLoader.cpp  ASThreadDICOMLoader.h  ASThreadDICOMScanner.cpp  ASThreadDICOMScanner.h  ASThreadExportDataToDisk.cpp  ASThreadExportDataToDisk.h  ASThreadImportDataFromDisk.cpp  ASThreadImportDataFromDisk.h  CMakeLists.txt
src/Translation/: CMakeLists.txt  zh.qm  zh.ts
src/Transmission/: ASTransAddDeleteData.cpp  ASTransAddDeleteData.h  ASTransCompleter.cpp  ASTransCompleter.h  ASTransContour.cpp  ASTransContour.h  ASTransDICOMLoader.cpp  ASTransDICOMLoader.h  ASTransDataGeneral.cpp  ASTransDataGeneral.h  ASTransGeneralInteractor.cpp  ASTransGeneralInteractor.h  ASTransGlobalKeyBoard.cpp  ASTransGlobalKeyBoard.h  ASTransInteractorStyle.cpp  ASTransInteractorStyle.h  ASTransLandmark.cpp  ASTransLandmark.h  ASTransLang.cpp  ASTransLang.h  ASTransROI.cpp  ASTransROI.h  ASTransSeeds.cpp  ASTransSeeds.h  ASTransSetting.cpp  ASTransSetting.h  ASTransSidebarGeneral.cpp  ASTransSidebarGeneral.h  ASTransStatusBarGeneral.cpp  ASTransStatusBarGeneral.h  ASTransTheme.cpp  ASTransTheme.h  ASTransmissionBase.cpp  ASTransmissionBase.h  ASTransmissionManager.cpp  ASTransmissionManager.h  CMakeLists.txt
src/Visualization/: ASColorMap.cpp  ASColorMap.h  ASPipelineManager.cpp  ASPipelineManager.h  ASVisualizationManager.cpp  ASVisualizationManager.h  ASVisualizationManager2D.cpp  ASVisualizationManager2D.h  ASVisualizationManager3D.cpp  ASVisualizationManager3D.h  CMakeLists.txt
src/Visualization/Pipeline/: ASPipelineArrayImage.cpp  ASPipelineArrayImage.h  ASPipelineBase.cpp  ASPipelineBase.h  ASPipelineContour.cpp  ASPipelineContour.h  ASPipelineCrossLine2D.cpp  ASPipelineCrossLine2D.h  ASPipelineLandmark.cpp  ASPipelineLandmark.h  ASPipelineMask.cpp  ASPipelineMask.h  ASPipelineOuterBorder3D.cpp  ASPipelineOuterBorder3D.h  ASPipelinePolyImage.cpp  ASPipelinePolyImage.h  ASPipelineSeeds.h  (+5 more)
src/vtk/: CMakeLists.txt  vtkOBJWriter.cxx  vtkOBJWriter.h
(+107 files in other folders)
